--- a/Part-66 thumbnails.html
+++ b/Part-66 thumbnails.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Part-66 thumbails test</title>
+  <title>Part-66 thumbails</title>
   <link rel="stylesheet" href="Part-66 thumbnails.css"
 </head>
 <body>
