--- a/Part-66 thumbnails.html
+++ b/Part-66 thumbnails.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Part-66 thumbails</title>
-  <link rel="stylesheet" href="Part-66 thumbnails.css"
+  <link rel="stylesheet" href="Part-66 thumbnails.css"/>
 </head>
 <body>
     <div class="thumbox">
